Updated JAXB plug-in, files, and settings to be compatible with Java 11.