@@ -7,16 +7,19 @@
   <name>Shadow Compiler</name>
   <url>www.shadow-language.org</url>
   <description>A compiler for the Shadow programming language</description>
+  
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
+ 
+  
+  
   <build>
+  
     <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
         <version>2.5</version>
@@ -41,6 +44,13 @@
 	            <exclude>Windows.ll</exclude>
 				<exclude>Shared.ll</exclude>
 	          </excludes>
+	          <followSymlinks>false</followSymlinks>
+	        </fileset>
+	        <fileset>
+	          <directory>src/main/java/shadow/jaxb</directory>
+	          <includes>
+	            <include>*.java</include>	            
+	          </includes>
 	          <followSymlinks>false</followSymlinks>
 	        </fileset>	        
 	      </filesets>
@@ -67,25 +77,47 @@
         </executions>
       </plugin>
       <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+              <release>11</release>
+          </configuration>
+      </plugin>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.0</version>
+          <configuration>
+              <argLine>--illegal-access=permit</argLine>
+          </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jaxb2-maven-plugin</artifactId>
-        <version>1.6</version>
+        <version>2.5.0</version>
          <executions>
             <execution>
                 <id>xjc</id>
                 <goals>
                   <goal>xjc</goal>
                 </goals>
-                <configuration>
-                  <outputDirectory>src/main/java</outputDirectory>
-                  <schemaDirectory>src/main/resources</schemaDirectory>
-                  <schemaFiles>configuration.xsd</schemaFiles>
-                  <packageName>shadow.jaxb</packageName>
-                  <clearOutputDir>false</clearOutputDir>
-                </configuration>
+                
             </execution>
         </executions>
-      </plugin>     
+        <configuration>
+        		<!-->sources>
+                        <source>src/main/resources/dummy.xsd</source>
+                        <source>src/main/resources/configuration.xsd</source>
+                    </sources-->
+         <outputDirectory>src/main/java</outputDirectory>
+         <packageName>shadow.jaxb</packageName>
+         <episodeFileName>episode</episodeFileName>
+         <clearOutputDir>false</clearOutputDir>
+         <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
+       </configuration>
+     
+    </plugin>
       <plugin>
       	<groupId>org.antlr</groupId>
       	<artifactId>antlr4-maven-plugin</artifactId>
@@ -201,5 +233,27 @@
     	<artifactId>junit-platform-runner</artifactId>
     	<version>1.5.2</version>
     </dependency>
+    <dependency>
+    	<groupId>org.codehaus.mojo</groupId>
+    	<artifactId>jaxb2-maven-plugin</artifactId>
+    	<version>2.5.0</version>
+    </dependency>
+    <dependency>
+		<groupId>javax.xml.bind</groupId>
+		<artifactId>jaxb-api</artifactId>
+		<version>2.3.0</version>
+	</dependency>        
+  	<dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.2</version>
+      <scope>runtime</scope>
+ 	</dependency>
+	<dependency>
+      <groupId>com.sun.activation</groupId>
+      <artifactId>jakarta.activation</artifactId>
+      <version>1.2.1</version>
+      <scope>runtime</scope>
+  </dependency>        
   </dependencies>
 </project>
